--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".MainActivity2" />
+        <activity android:name=".ListActivity2" />
+        <activity android:name=".AdminActivity" />
+        <activity android:name=".ListActivity" />
         <activity android:name=".ShowActivity" />
         <activity android:name=".loginActivity">
             <intent-filter>
